syntax = "proto3";

import "basic.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/piliphulko/marketplace-example/internal/service/service-order-pay/core";

service OrderPay {
    
    rpc GetMarketplace(google.protobuf.Empty) returns (basic.GoodsArray);

    rpc CreateOrder(basic.NewOrderARRAY) returns (basic.OrderUuid);

    rpc AddToOrder(basic.AddToOrderARRAY) returns (google.protobuf.Empty);

    rpc ConfirmOrder(basic.OrderUuid) returns (google.protobuf.Empty);

    rpc CancelOrder(basic.OrderUuid) returns (google.protobuf.Empty);

    rpc CompleteOrder(basic.OrderUuid) returns (google.protobuf.Empty);

}